--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body {
   color: white;
 }
 
+h1 {font-size: 150%;}
+h2 {font-size: 140%;}
+h3 {font-size: 130%;}
+h4 {font-size: 120%;}
+h5 {font-size: 110%;}
+
 p {
   text-align: justify;
   text-justify: inter-word;
