[css] add serif font

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   max-width: 65rem;
   margin: 1rem; /* top, right, bottom, and left */
   padding: 0.5rem;
-  font-family: sans-serif;
+  font-family: serif;
   background: black;
   color: white;
 }
@@ -12,6 +12,14 @@ h2 {font-size: 120%;}
 h3 {font-size: 100%;}
 h4 {font-size: 100%;}
 h5 {font-size: 100%;}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: sans-serif;
+}
 
 p {
   text-align: justify;
