--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
   font-family: serif;
 }
 
+.website-title {
+    font-variant: small-caps;
+    font-family: serif;
+}
+
 h1 {font-size: 145%;}
 h2 {font-size: 120%;}
 h3 {font-size: 100%;}
@@ -30,7 +35,7 @@ p {
 }
 
 #preamble {
-    width: 25%;
+    width: 30%;
     border-right: 2px solid grey;
     padding-right: 1rem;
 }
@@ -43,10 +48,6 @@ p {
     list-style: none;
     margin: 0 0 1.25rem 0;
     padding: 0 0 0 0;
-}
-
-#preamble li {
-    margin: 0 0 1rem 0;
 }
 
 #content {
