[css] preamble width

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ p {
 }
 
 #preamble {
-    width: 30%;
-    border-right: 2px solid grey;
+    width: 35%;
+    border-right: 2px solid black;
     padding-right: 1rem;
 }
 
