--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,6 @@ h3 {font-size: 100%;}
 h4 {font-size: 100%;}
 h5 {font-size: 100%;}
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-    font-family: sans-serif;
-}
-
 p {
   text-align: justify;
   text-justify: inter-word;
@@ -30,9 +22,9 @@ p {
 }
 
 #preamble {
-    width: 35%;
+    width: 30%;
     border-right: 2px solid black;
-    padding-right: 1rem;
+    padding-right: 0.5rem;
 }
 
 #preamble h1 {
@@ -43,6 +35,10 @@ p {
     list-style: none;
     margin: 0 0 1.25rem 0;
     padding: 0 0 0 0;
+}
+
+#preamble li {
+    padding-bottom: 0.75rem;
 }
 
 #content {
