--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ p {
 }
 
 #preamble {
-    width: 30%;
+    width: 25%;
     border-right: 2px solid black;
     padding-right: 0.5rem;
 }
@@ -55,6 +55,11 @@ p {
     padding-right: 1rem;
 }
 
+#about p {
+  text-align: initial;
+  text-justify: initial;
+  line-height: 170%;
+}
 
 #profile-pic {
     padding: 1rem 1rem 0 1rem;
@@ -63,7 +68,12 @@ p {
 #profile-pic img {
     height: auto;
     max-width: 200px;
-    border-radius: 5px;
+    border: 2px solid black;
+}
+
+#profile-pic figcaption {
+    text-align: center;
+    font-style: italic;
 }
 
 #postamble {
@@ -126,9 +136,11 @@ td {
   }
 
   #profile-pic {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   width: 50%;
+   display: initial;
+   margin: initial;
+  }
+
+  #profile-pic figcaption {
+      text-align: left;
   }
 }
