--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,9 @@ body {
   font-family: serif;
 }
 
-h1 {font-size: 145%;}
-h2 {font-size: 120%;}
-h3 {font-size: 100%;}
-h4 {font-size: 100%;}
-h5 {font-size: 100%;}
+h1,h2,h3,h4 {
+  text-transform: lowercase;
+}
 
 p {
   text-align: justify;
@@ -16,73 +14,24 @@ p {
   line-height: 175%;
 }
 
-#container {
-    display: flex;
-}
-
-#preamble {
-    width: 20%;
-    border-right: 2px solid black;
-    padding: 1rem;
-}
-
-#content {
-    width: 80%;
-    padding: 1rem;
-}
-
-#preamble h1 {
-    font-size: 160%;
-    margin: 1rem;
-}
-
-#preamble ul {
-    list-style: none;
-    margin: 2rem 0 0 0;
-    padding: 0 0 0 0;
-}
-
 #preamble li {
-    padding-bottom: 1rem;
-}
-
-#container-index {
-    display: flex;
-}
-
-#about {
-    width: 70%;
-    padding-right: 1rem;
+  text-transform: lowercase;
 }
 
 #about p {
   text-align: initial;
   text-justify: initial;
-  line-height: 170%;
 }
 
-#profile-pic {
-    width: 30%;
-}
 
-#profile-pic img {
+#about img {
     height: auto;
-    max-width: 100%;
+    max-width: 185px;
     border: 2px solid black;
 }
 
-#profile-pic figcaption {
+#about figcaption {
     font-style: italic;
-}
-
-#profile-pic figure {
-    text-align: center;
-    padding: 0;
-    margin: 0;
-}
-
-#postamble {
-    border-top: 2px solid black;
 }
 
 img {
@@ -102,6 +51,10 @@ figure figcaption {
 td {
     vertical-align: top;
     padding: 0 1rem 1rem 0;
+}
+
+#postamble {
+    text-transform: lowercase;
 }
 
 @media (max-width: 768px) {
