--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   max-width: 65rem;
   margin: 1rem; /* top, right, bottom, and left */
-  font-family: serif;
+  font-family: sans-serif;
 }
 
 h1,h2,h3,h4 {
@@ -14,6 +14,11 @@ p {
   line-height: 175%;
 }
 
+#recent-posts td:nth-child(1)::before {
+    content:"📌 ";
+    padding-right: 0.25rem;
+}
+                            
 #preamble li {
   text-transform: lowercase;
 }
